# pyorm

./: README.md  discoveries.org  pyproject.toml
src/pyorm/: __init__.py  database.py  models.py  utils.py
src/pyorm/backends/: base.py  sqlite.py
tests/sqlite/: conftest.py  test_concurrency.py  test_performance.py  test_query.py
