[project]
name = "pyorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carlos Gamino", email = "carlos.alfredo55@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]
[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-benchmark>=5.2.3",
]
[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
init_typed = true

[tool.pyrefly]
